# send-me-daddy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
proto/: mail.proto
src/: consumer.rs  email.rs  http.rs  lib.rs  main.rs  provider.rs  queue.rs  sender.rs
