[package]
name = "send-me-daddy"
version = "0.1.0"
edition = "2021"
default-run = "http"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
futures = "0.3.28"
kafka = "0.9.0"
prost = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tonic = "0.10.0"

[build-dependencies]
tonic-build = "0.9"
